<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name" translatable="false">QDict</string>
    <string name="action_search">Search</string>

    <!-- ui -->
    <string name="sdcard_error">sdcard error</string>
    <string name="prefs_title_whatsnew" translatable="false">What\'s New?</string>
    <string name="prefs_title_help">Help</string>
    <string name="prefs_title_feed_back">Feedback</string>
    <string name="btn_more_apps" translatable="false">More Apps</string>

    <!-- action -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Remove</string>
    <string name="checked_all">Select All</string>
    <string name="unchecked_all">Unselect All</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="corner">Corner</string>
    <string name="maximize">Maximize</string>
    <string name="delete_all_recent_summary">Do you want to delete all recent words?</string>
    <string name="delete_all_favorite_summary">Do you want to delete all favorite words?</string>
    <string name="delete_recent_summary">Do you want to delete recent words?</string>
    <string name="delete_favorite_summary">Do you want to delete favorite words?</string>
    <string name="notification_message">Tap here to open QDict</string>
    <string name="notification_title">%1$s is running</string>
    <!-- dicitonary -->
    <plurals name="matches_found">
        <item quantity="zero">No matches</item>
        <item quantity="one">1 match</item>
        <item quantity="few"><xliff:g id="number" example="2">%d</xliff:g> matches</item>
        <item quantity="other"><xliff:g id="number" example="137">%d</xliff:g> matches</item>
    </plurals>
    <plurals name="words_count">
        <item quantity="zero">No keywords</item>
        <item quantity="one">1 keyword</item>
        <item quantity="other"><xliff:g id="number" example="137">%d</xliff:g> keywords</item>
    </plurals>
    <plurals name="items_count">
        <item quantity="zero">0 item</item>
        <item quantity="one">1 item</item>
        <item quantity="other"><xliff:g id="number" example="137">%d</xliff:g> items</item>
    </plurals>

    <string name="recent_lable">Recent words</string>
    <string name="favorite_lable">Favorites</string>
    <string name="settings_lable">Settings</string>
    <string name="guide_lable">Guide</string>
    <string name="select_dictionary">Select dictionary</string>
    <string name="join_us">Join us</string>
    <string name="share_lable">Share</string>
    <string name="about_lable">About</string>
    <string name="ftp_server">Go to Mini-FTPServer</string>
    <string name="keywords_null">No matched words</string>
    <string name="favorites_no_word">No words added to favorite list.</string>
    <string name="recent_no_word">No recent word look-up.</string>
    <string name="dict_not_found">No dictionary available.\n\nPlease add dictionary into \'%1$s\' directory.\n\nYou can use the Mini-FTPServer software to push data dictionary to your device.</string>
    <!-- seaching -->
    <string name="keywords_search">Searching&#8230;</string>
    <string name="fuzzy_query_prompt">Press \'wordlist\' button to \'fuzzy\' query with keyword above.</string>
    <string name="fulltext_query_prompt">Press \'wordlist\' button to \'Full-text\' search with keyword above.</string>
    <string name="pattern_query_prompt">Press \'wordlist\' button to \'pattern\' query with keyword above.</string>

    <!-- voice -->
    <string name="press_on_when_done" translatable="false">Press on the recording icon when you are done!</string>
    <!-- setting -->
    <string name="prefs_category_title_general">General</string>
    <string name="prefs_title_source">Data</string>
    <string name="prefs_title_tts">Speech</string>
    <string name="prefs_title_capture">Capture</string>
    <string name="prefs_summary_capture">Search from clipboard</string>
    <string name="prefs_title_notification">Notification</string>
    <string name="prefs_title_notification_summary">Using notification for quick search</string>
    <string name="prefs_title_tts_summary">Using text to speech</string>
    <string name="prefs_summary_source" translatable="false">/sdcard/QDict/</string>
    <string name="prefs_category_title_theme">Theme</string>
    <!--  -->
    <string name="prefs_title_font_text">Font in content</string>
    <string name="prefs_title_max_favorite_word">Favorite words</string>
    <string name="prefs_title_max_favorite_word_summary">Max words count: %1$s</string>
    <string name="prefs_title_theme">Themes</string>
    <string name="prefs_title_languages">Language</string>
    <string name="msg_do_not_show_popup">Don\'t show popup window from clipboard</string>
    <!-- about -->
    <string name="app_license">Apache, Version 2.0</string>
    <string name="app_version_label">Version: </string>
    <string name="app_author_label">Author: </string>
    <string name="app_email_label">Email: </string>
    <string name="app_author" translatable="false">MADMAN Team</string>
    <string name="app_license_label">License: </string>
    <string name="app_website_label" translatable="false">Website: </string>
    <string name="copyright" translatable="false">&lt;font color=&quot;#478047&quot;&gt;© Madman Team&lt;/font&gt;</string>
    <string name="readme_text"> 1. Glob-style pattern matching:&lt;br&gt;
       You can input strings containing \'*\' (wildcard) and \'?\' (joker) as the pattern. \'*\' matches an arbitrary, possibly empty, string, and \'?\' matches an arbitrary character. After pressing \'wordlist\' button, the words that match this pattern will be shown in the list.&lt;br&gt;&lt;br&gt;
       2. Fuzzy query:&lt;br&gt;
       When you can\'t remember how to spell a word exactly, you can try Fuzzy query. It uses \"Levenshtein Edit Distance\" to compute the similarity between two words, and gives the match results which are most similar to the word that you input. To create a fuzzy query, just input the word with a beginning \"/\", and then press \'wordlist\' button.&lt;br&gt;&lt;br&gt;
       3. Full-text search:&lt;br&gt;
       Full-text search searches for a word in the data. To create a Full-text search, just input the word with a beginning \":\", and then press \'wordlist\' button. For example, \":ab cd\" searches data which contain both \"ab\" and \"cd\". If the words contain space character, you can use \"\\ \", such as \":apple\\ pie\", other escaping characters are \"\\\\\" for \'\\ \', \"\\t\" for Tab and \"\\n\" for new line.&lt;br&gt;&lt;br&gt;
       For more help information, please read the \'User Guide\' :  &lt;br&gt;
       &lt;a href="http://madman-team.blogspot.com/2015/05/qdict-guide.html" target="_blank">http://madman-team.blogspot.com&lt;\/a&gt;&lt;br&gt;&lt;br&gt;</string>

</resources>