<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mmt_white"
    android:paddingBottom="15dp" >

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_padding"
        android:layout_marginTop="@dimen/large_padding"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" >
    </ImageView>

    <com.mmt.widget.QTextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/iv_icon"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/mmt_black" />

    <com.mmt.widget.QTextView
        android:id="@+id/tv_app_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_app_name"
        android:layout_below="@id/tv_app_name"
        android:text="@string/app_version_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/mmt_black" />

    <com.mmt.widget.QTextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_app_name"
        android:layout_marginLeft="5dip"
        android:layout_toRightOf="@id/tv_app_version_label"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/mmt_black" />

    <LinearLayout
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_icon"
        android:layout_marginTop="20.0dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.mmt.widget.QTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_author_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/mmt_black" />

        <com.mmt.widget.QTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_author"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/mmt_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/author"
        android:layout_marginTop="5.0dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.mmt.widget.QTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_license_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/mmt_black" />

        <com.mmt.widget.QTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/app_license"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/mmt_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/license"
        android:layout_marginTop="5.0dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.mmt.widget.QTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_email_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/mmt_black" />

        <com.mmt.widget.QTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:autoLink="web|email"
            android:linksClickable="true"
            android:text="@string/app_email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/mmt_black" />
    </LinearLayout>

</RelativeLayout>